--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="total" type="id">Total</item>
+<!--    <item name="total" type="id">Total</item>-->
+<!--    <string name="total">Total</string>-->
 </resources>
